--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>How to Login TotalAV Account?| TotalAV Support</title>
     <meta name="description" content="Learn how to login and sign in to your TotalAV account easily. Step-by-step guide including download, install, troubleshooting, support, and customer service info." />
     <meta name="keywords" content="TotalAV login, sign in TotalAV, download TotalAV, install TotalAV, TotalAV not working, TotalAV support, customer service, customer care" />
+    <link rel="icon" href="favicon.ico" type="" />
     <style>
         /* Basic Reset */
         * {
@@ -129,7 +130,7 @@
     </header>
 
     <main class="container">
-        <h1>How to Login TotalAV Account? Complete Step-by-Step Guide</h1>
+        <h1>How to Login TotalAV Account? Quick Gudie</h1>
 
         <p>Are you struggling to <strong>login</strong> or <strong>sign in</strong> to your TotalAV account? Whether you're a new user or an existing one, this comprehensive guide will walk you through the entire process — from <strong>downloading</strong> and <strong>installing</strong> the TotalAV software, to troubleshooting common issues like the login not working, and getting in touch with <strong>customer support</strong> or <strong>customer care</strong> if needed.</p>
 
@@ -179,7 +180,7 @@
         <p>You can contact the support team in several ways:</p>
 
         <ul>
-            <li><strong>Live Chat:</strong> Visit <a href="https://accuratelivechat.com" target="_blank" rel="noopener">accuratelivechat.com</a> to chat with a customer care representative instantly.</li>
+            <li><strong>Live Chat:</strong> Visit <a href="https://accuratelivechat.com" target="_blank" rel="noopener">TotalAV Support</a> to chat with a customer care representative instantly.</li>
             <li><strong>Email Support:</strong> Send an email describing your problem and wait for a detailed response.</li>
             <li><strong>Phone Support:</strong> Use the customer service phone number listed on the TotalAV official site.</li>
             <li><strong>Help Center:</strong> Check the FAQ section on TotalAV’s official website for quick solutions.</li>
@@ -196,11 +197,11 @@
             <li>Click <strong>Activate</strong> to enable premium features.</li>
         </ul>
 
-        <p>If you have not received your activation key or it is not working, visit <a href="https://activation-key.net" target="_blank" rel="noopener">activation-key.net</a> or contact TotalAV support immediately.</p>
+        <p>If you have not received your activation key or it is not working, visit <a href="https://activation-key.net" target="_blank" rel="noopener">TotalAV Actiavtion Key</a> or contact TotalAV support immediately.</p>
 
         <h2>Tips for a Smooth Login Experience</h2>
         <ul>
-            <li>Always use the official TotalAV login portal: <a href="https://aclogportal.com/totalav-login" target="_blank" rel="noopener">https://aclogportal.com/totalav-login</a>.</li>
+            <li>Always use the official TotalAV login portal: <a href="https://aclogportal.com/totalav-login" target="_blank" rel="noopener">totalav login</a>.</li>
             <li>Keep your software updated to avoid compatibility issues.</li>
             <li>Regularly change your password to keep your account secure.</li>
             <li>Enable two-factor authentication if available.</li>
