--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>How to Login TotalAV Account?| TotalAV Support</title>
     <meta name="description" content="Learn how to login and sign in to your TotalAV account easily. Step-by-step guide including download, install, troubleshooting, support, and customer service info." />
     <meta name="keywords" content="TotalAV login, sign in TotalAV, download TotalAV, install TotalAV, TotalAV not working, TotalAV support, customer service, customer care" />
-    <link rel="icon" href="favicon.ico" type="" />
+    <link rel="icon" href="favicon.ico" type="totalav_logo" />
     <!-- Start of  Zendesk Widget script -->
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
     <!-- End of  Zendesk Widget script -->
