--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="msvalidate.01" content="EF0D113A83DA6960716D3F3EB33D127B" />
+    <meta name="google-site-verification" content="2w6vC5QvIZ5HLbtPZNuTyHBpehF5mkviz_jlinYTNyg" />
     
     <title>How to Login TotalAV Account?| TotalAV Support</title>
     <meta name="description" content="Learn how to login and sign in to your TotalAV account easily. Step-by-step guide including download, install, troubleshooting, support, and customer service info." />
