--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
     <header>
         <div class="logo"><strong>TotalAV Guide</strong></div>
         <nav>
-            <a href="https://aclogportal.com/totalav-login" target="_blank" rel="noopener">Login</a>
+            <a href="https://totalavaccount.com" target="_blank" rel="noopener">Login</a>
             <a href="https://activation-key.net" target="_blank" rel="noopener">Activate</a>
             <a href="https://accuratelivechat.com" target="_blank" rel="noopener">Support</a>
         </nav>
     </header>
 
     <main class="container">
-        <h1>How to Login TotalAV Account? Quick Gudie</h1>
+        <h1>TotalAV Account Login and Support</h1>
 
         <p>Are you struggling to <strong>login</strong> or <strong>sign in</strong> to your TotalAV account? Whether you're a new user or an existing one, this comprehensive guide will walk you through the entire process — from <strong>downloading</strong> and <strong>installing</strong> the TotalAV software, to troubleshooting common issues like the login not working, and getting in touch with <strong>customer support</strong> or <strong>customer care</strong> if needed.</p>
 
@@ -207,7 +207,7 @@
 
         <h2>Tips for a Smooth Login Experience</h2>
         <ul>
-            <li>Always use the official TotalAV login portal: <a href="https://aclogportal.com/totalav-login" target="_blank" rel="noopener">totalav login</a>.</li>
+            <li>Always use the official TotalAV login portal: <a href="https://totalavaccount.com" target="_blank" rel="noopener">totalav login</a>.</li>
             <li>Keep your software updated to avoid compatibility issues.</li>
             <li>Regularly change your password to keep your account secure.</li>
             <li>Enable two-factor authentication if available.</li>
@@ -215,7 +215,7 @@
         </ul>
 
         <div class="btn-group">
-            <a href="https://aclogportal.com/totalav-login" target="_blank" rel="noopener" class="btn-link">Login to TotalAV</a>
+            <a href="https://totalavaccount.com" target="_blank" rel="noopener" class="btn-link">Login to TotalAV</a>
             <a href="https://activation-key.net" target="_blank" rel="noopener" class="btn-link">Activate TotalAV</a>
             <a href="https://accuratelivechat.com" target="_blank" rel="noopener" class="btn-link">Contact Support</a>
         </div>
