--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="msvalidate.01" content="EF0D113A83DA6960716D3F3EB33D127B" />
     <meta name="google-site-verification" content="2w6vC5QvIZ5HLbtPZNuTyHBpehF5mkviz_jlinYTNyg" />
     
-    <title>How to Login TotalAV Account?| TotalAV Support</title>
+    <title>TotalAV Account Login and Support</title>
     <meta name="description" content="Learn how to login and sign in to your TotalAV account easily. Step-by-step guide including download, install, troubleshooting, support, and customer service info." />
     <meta name="keywords" content="TotalAV login, sign in TotalAV, download TotalAV, install TotalAV, TotalAV not working, TotalAV support, customer service, customer care" />
     <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjZUDWdCltoaMQqbHefPGiAyZkyh6iS5xTdkgU8IIwiTBT0fxOI4lNvv3ZC97gefB8weik4C-oCtUgxDUsCT1za6qFCb3QDcBmaeZAOu4-JMsxNhHUHmvYvEkxgi6oWZT4YxKZIFCxEjdeIvG0iICKfHF72CPCM0GVIcQh_ESeVoc3vxVAR8Qtswa3MoJs/s1600/totalav_logo.jpg" type="totalav_logo" />
